--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,20 @@ body {
   letter-spacing: 0.02em;
   color: #2196f3;
 }
+.contact-mail:hover,
+.contact-mail:focus {
+  color: #2196f3;
+}
 .contact-tel {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
+}
+.contact-tel:hover,
+.contact-tel:focus {
+  color: #2196f3;
 }
 .btn {
   font-family: 'inherit';
@@ -83,27 +91,37 @@ body {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+.google-map:hover,
+.google-map:focus {
+  color: #2196f3;
+}
 .google-map {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+
 .contact-email {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+.contact-email:hover,
+.contact-email:focus {
+  color: #2196f3;
+}
 .contact-phone {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+.contact-phone:hover,
+.contact-phone:focus {
+  color: #2196f3;
 }
