--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,24 @@
+:root {
+  --white-color: #ffffff; /*цвет основного фона*/
+  --blue-color: #2196f3; /*цвет на сайте,кнопка,ссылка*/
+  --grey-color: #2f303a; /*цвет фона темно-серый*/
+  --light-grey-color: #757575; /*цвет шрифта серый*/
+  --dark-grey-color: #212121; /*цвет шрифта черный-заголовок,описание*/
+  --black-color: #000000; /*цвет текста*/
+  --mud-white-color: #f5f4fa;/*image background*/
+  --dark-white-color: #f5f5f5;/*body backgroun*/
+  --mail-color: rgba(255, 255, 255, 0.6); /* цвет tel,mail*/
+}
+
 body {
   font-family: 'Roboto', san-serif;
   background-color: #f5f5f5;
 }
 .list {
   list-style: none;
+}
+.link-decoration {
+  text-decoration: none;
 }
 .title {
   background-color: #ffffff;
@@ -96,6 +111,7 @@ body {
   color: #2196f3;
 }
 .google-map {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
@@ -104,6 +120,7 @@ body {
 }
 
 .contact-email {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
@@ -115,6 +132,7 @@ body {
   color: #2196f3;
 }
 .contact-phone {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
@@ -130,7 +148,6 @@ body {
   font-size: 44px;
   line-height: 1.36;
   /* or 136% */
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
@@ -143,14 +160,9 @@ body {
   font-size: 16px;
   line-height: 1.88;
   /* identical to box height, or 188% */
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
   background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
 }
 .soft-skills-item {
   font-weight: 700;
@@ -173,7 +185,16 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-  text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+}
+.image-background {
+  background-color: #f5f4fa;
+}
+.image-team-position {
+  font-size: 16px;
+  line-height: 1.18;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+  color: #757575;
 }
