--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,13 @@
   --dark-grey-color: #212121; /*цвет шрифта черный-заголовок,описание*/
   --studio-top-color: #000000; /*цвет текста*/
   --mud-white-color: #f5f4fa;/*image background*/
-  --dark-white-color: #f5f5f5;/*body backgroun*/
+  --dark-white-color: #f5f5f5;/*body background*/
   --mail-color: rgba(255, 255, 255, 0.6); /* цвет tel,mail*/
 
 }
 
 body {
-  font-family: 'Roboto', san-serif;
+  font-family: "Roboto",san-serif;
   background-color: var(--dark-white-color);
 }
 .list {
