--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  font-family: "Roboto",san-serif;
+  font-family: 'Roboto', san-serif;
   background-color: var(--dark-white-color);
 }
 .list {
