--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,9 @@ body {
 .title-slogan {
   background:var(--grey-color);
 }
-.button-order {
+.button-order,
+.active 
+{
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
