--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,13 @@
 }
 
 body {
-  font-family: 'Roboto', san-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: var(--top-line-color);
   color: var(--main-text-color);
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+.image-portfolio,
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -64,7 +65,7 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--dark-grey-color);
+  color: var(--dark-grey-colorb);
 }
 .contact-mail {
   font-weight: 500;
@@ -79,7 +80,7 @@ body {
 }
 .navigation-header-link:hover,
 .navigation-header-link:focus {
-  color: var(--dark-grey-color);
+  color: var(--blue-color);
 }
 .current {
   color: var(--blue-color);
@@ -98,7 +99,7 @@ body {
 }
 
 .btn {
-  font-family: 'inherit';
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -106,6 +107,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--dark-grey-color);
+  background-color: var(--mud-white-color);
 }
 .btn:hover,
 .btn:focus {
@@ -183,7 +185,7 @@ body {
   background: var(--grey-color);
 }
 .button-order {
-  font-family: 'inherit';
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
