--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,39 @@
   --mail-color: rgba(255, 255, 255, 0.6); /* цвет tel,mail*/
   --button-color: #188ce8; /*кнопка,цвет*/
 }
-
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  gap: 30px;
+}
+button {
+  cursor: pointer;
+}
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
   font-family: 'Roboto', sans-serif;
   background-color: var(--top-line-color);
@@ -39,7 +71,47 @@ body {
 }
 .title {
   background-color: var(--top-line-color--);
+  outline: 6px solid tomato;
 }
+.main-link {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.navigation {
+  display: flex;
+}
+.navigation-header {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+.navigation-header {
+  display: flex;
+}
+
+.navigation-item {
+  margin-left: 93px;
+  outline: 6px solid tomato;
+  display: block;
+}
+.navigation-item:last-child {
+  margin-right: 0;
+}
+.contact {
+  display: flex;
+  margin-left: auto;
+}
+.contact .item + .item {
+  margin: 50px;
+}
+.contact-item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
+}
+
 .Web-header {
   font-family: 'Raleway';
   font-weight: 700;
@@ -48,6 +120,9 @@ body {
   /* identical to box height */
   letter-spacing: 0.03em;
   color: var(--blue-color);
+  display: flex;
+  display: inline-block;
+  outline: 1px solid red;
 }
 .Studio-header {
   font-family: 'Raleway';
@@ -57,6 +132,9 @@ body {
   /* identical to box height */
   letter-spacing: 0.03em;
   color: var(--studio-top-color);
+  display: flex;
+  display: inline-block;
+  outline: 1px solid red;
 }
 
 .navigation-header-link {
