--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ button {
   cursor: pointer;
 }
 .container {
-  width: 1200px;
+  width: 1230px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -93,12 +93,15 @@ body {
   outline: 6px solid tomato;
   display: block;
 }
+.navigation-header .navigation-item {
+  margin-right: 50px;
+}
 .navigation-item:last-child {
   margin-right: 0;
 }
 .contact {
   display: flex;
-  margin-left: 344px;
+  margin-left: 359px;
 }
 .contact .navigation-list + .navigation-list {
   margin-left: 50px;
@@ -171,6 +174,12 @@ body {
 .contact-tel:focus {
   color: var(--blue-color);
 }
+.button-list {
+  display: flex;
+  margin-bottom: 56px;
+  justify-content: center;
+  padding-top: 100px;
+}
 
 .btn {
   font-family: inherit;
@@ -182,70 +191,14 @@ body {
   letter-spacing: 0.03em;
   color: var(--dark-grey-color);
   background-color: var(--mud-white-color);
+  padding: 6px 22px;
 }
 .btn:hover,
 .btn:focus {
   color: var(--top-line-color);
   background-color: var(--blue-color);
 }
-.site-footer {
-  background: var(--grey-color);
-}
-.Web {
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  /* identical to box height */
-  letter-spacing: 0.03em;
-  color: var(--blue-color);
-}
-.Studio {
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  /* identical to box height */
-  letter-spacing: 0.03em;
-  color: var(--top-line-color);
-}
-.google-map:hover,
-.google-map:focus {
-  color: var(--blue-color);
-}
-.google-map {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  /* or 171% */
-  letter-spacing: 0.03em;
-  color: var(--top-line-color);
-}
 
-.contact-email {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  /* or 171% */
-  letter-spacing: 0.03em;
-  color: var(--mail-color);
-}
-.contact-email:hover,
-.contact-email:focus {
-  color: var(--blue-color);
-}
-.contact-phone {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  /* or 171% */
-  letter-spacing: 0.03em;
-  color: var(--mail-color);
-}
-.contact-phone:hover,
-.contact-phone:focus {
-  color: var(--blue-color);
-}
 .slogan-name {
   font-weight: 900;
   font-size: 44px;
@@ -258,6 +211,7 @@ body {
 .title-slogan {
   background: var(--grey-color);
 }
+
 .button-order {
   font-family: inherit;
   font-weight: 700;
@@ -319,6 +273,21 @@ body {
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
+.images {
+  display: flex;
+  flex-wrap: wrap;
+}
+.images-item {
+  width: 370px;
+  margin-right: 30px;
+}
+.images-item:nth-last-child(-n + 3) {
+  margin-bottom: 94px;
+}
+.images-item:nth-child(3n) {
+  margin-right: 0;
+}
+
 .image-name {
   font-weight: 700;
   font-size: 18px;
@@ -326,6 +295,9 @@ body {
   /* identical to box height, or 200% */
   letter-spacing: 0.06em;
   color: var(--dark-grey-color);
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 .image-name-discription {
   font-weight: 400;
@@ -334,4 +306,73 @@ body {
   /* identical to box height, or 188% */
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+  display: block;
+  margin-top: 4px;
+  margin-bottom: 20px;
+}
+.site-footer {
+  background: var(--grey-color);
+}
+.Web {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+  color: var(--blue-color);
+}
+.Studio {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+  color: var(--top-line-color);
+}
+.google-map:hover,
+.google-map:focus {
+  color: var(--blue-color);
+}
+.google-map {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: var(--top-line-color);
+}
+
+.contact-email {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: var(--mail-color);
+}
+.contact-email:hover,
+.contact-email:focus {
+  color: var(--blue-color);
+}
+.contact-phone {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: var(--mail-color);
+}
+.contact-phone:hover,
+.contact-phone:focus {
+  color: var(--blue-color);
+}
+
+.Web .Studio {
+  display: flex;
+}
+
+.contact-information {
+  margin-top: 20px;
 }
